修改成手動搜尋城市(可支援中文)

--- a/src/App.css
+++ b/src/App.css
@@ -24,3 +24,9 @@ body {
   border: 1px solid #0044BB;
   border-radius: 10px;
 }
+
+.searchBar {
+  padding: 5px;
+  border-radius: 10px;
+  border: 1px solid #0066FF;
+}
